Wed Jan  8 01:57:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c (add_initial_row_to_meta_theme): handle
	initial theme as custom.

	* TODO: update

Tue Jan  7 03:10:36 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-save.c (save_dialog_response): add a description
	entry.  Still needs escaping.

	* theme-thumbnail.c (generate_theme_thumbnail): read the thumbnail
	back from the child correctly.  I think thumbnailing fully works.

	* TODO: Update

2003-01-06  Seth Nickell  <snickell@stanford.edu>

	* gnome-theme-manager.c: (load_meta_themes):
	* theme-properties.glade:

	Removed #if 0'd code for hard-coding minimuum height
	of the tree view. Use glade properties to set minimuum
	height to a more reasonable value. Its hard to find
	items when you only see two in the scroll-view at
	any given time, and many people do not think to
	resize windows (nor should they have to :-)
	
2003-01-06  Seth Nickell  <snickell@stanford.edu>

	* gnome-theme-manager.c: (add_custom_row_to_meta_theme):

	Don't mark internal string for translation so we don't
	break string freeze.
	
Mon Jan  6 10:55:39 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c (setup_dialog): fix default image.
	Remove debugging g_prints.

2003-01-05  Seth Nickell  <snickell@stanford.edu>

	* gnome-theme-manager.c: (setup_dialog), (main):
	* Makefile.am:
	* theme-thumbnailing.png:

	Add a default image for when theme's are being
	thumbnailed.
	
	* theme-properties.glade:

	Hide dialog by default so it doesn't come
	up undrawn.
	
2003-01-05  Seth Nickell  <snickell@stanford.edu>

	* gnome-theme-manager.c: (add_custom_row_to_meta_theme),
	(remove_custom_row_from_meta_theme):
	* theme-thumbnail.c: (theme_thumbnail_invalidate_cache):
	* theme-thumbnail.h:
	
	Generate thumbnails for the custom theme.

Thu Jan  2 08:57:54 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c: correctly merge disk updates and the
	current setup.

	* TODO: Add a TODO
