@@ -1,3 +1,10 @@
+2003-01-08  Jody Goldberg <jody@gnome.org>
+
+	* gnome-theme-details.c (gnome_theme_details_update_from_gconf) :
+	  handle lack of metacity.
+	(window_theme_selection_changed) : ditto.
+	(gnome_theme_details_reread_themes_from_disk) : ditto.
+
 Wed Jan  8 01:57:09 2003  Jonathan Blandford  <jrb@gnome.org>
 
 	* gnome-theme-manager.c (add_initial_row_to_meta_theme): handle
